--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "ezy-cli",
-  "version": "1.0.0",
+  "version": "1.0.9",
   "description": "自定义前端脚手架",
   "main": "index.js",
   "scripts": {
@@ -17,6 +17,7 @@
     "commander": "^4.1.1",
     "ejs": "^3.1.3",
     "iconv-lite": "^0.6.2",
-    "inquirer": "^7.0.4"
+    "inquirer": "^7.0.4",
+    "ora": "^5.0.0"
   }
 }
